--- a/Coplas-Manrique-LaTeX.tex
+++ b/Coplas-Manrique-LaTeX.tex
@@ -244,7 +244,7 @@ Constituyen al aparato crítico el orden y rúbricas en los testimonios, el apar
 \addcontentsline{toc}{section}{\emph{\textsc{Coplas}}}
 \beginnumbering
 \begin{center}
-		[I]\footnoteA{[I] \textsc{Incipit} = Coplas que fiço don jorje manrriq\emph{ue} sobre la muerte del maestre de santiago don rrodrigo manrriq\emph{ue} su padre {\eg}; Dezir de don jorge manrriq\emph{ue} por la muerte de su padre {\jm}; De don jorge manrique por la muerte de su padre {\rl}; Coplas de do\emph{n} jorge ma\emph{n}riq\emph{ue} a la muerte del maestre don rrod\emph{rig}o ma\emph{n}riq\emph{ue} su padre {\hh}; Coplas que hizo do\emph{n} jorge manrriq\emph{ue} ala muerte del maestre de santiago do\emph{n} rodrigo manrique su padre {\im}.}
+		\textbf{[I]}\footnoteA{\textbf{[\textsc{Incipit}]} Coplas que fiço don jorje manrriq\emph{ue} sobre la muerte del maestre de santiago don rrodrigo manrriq\emph{ue} su padre {\eg}; Dezir de don jorge manrriq\emph{ue} por la muerte de su padre {\jm}; De don jorge manrique por la muerte de su padre {\rl}; Coplas de do\emph{n} jorge ma\emph{n}riq\emph{ue} a la muerte del maestre don rrod\emph{rig}o ma\emph{n}riq\emph{ue} su padre {\hh}; Coplas que hizo do\emph{n} jorge manrriq\emph{ue} ala muerte del maestre de santiago do\emph{n} rodrigo manrique su padre {\im}.}
 \end{center}
 \pstart
 \textsc{Recuerde}\footnoteE{\comillas{Recuerde} no tiene la acepción de \comillas{traer a la memoria}, sino la de \comillas{despertar} y, para ello, el \emph{Tesoro de la lengua castellana} de \textcite{Covarrubias1611} registra para el vocablo \emph{recordar} \comillas{despertar el que duerme, o boluer en acuerdo, del verbo recordor}. Posteriormente se registró el significado \comillas{Metaphoricamente vale despertar al que está dormido} (\emph{Autoridades}, 2ª acepción).} \textsc{el alma} dormida,\\
@@ -260,9 +260,9 @@ cómo a nuestro paresçer\\
 \edtext{q\emph{ua}lq\emph{uie}ra}{\Afootnote{qualqujer {\eg}}} tie\emph{n}po pasado \edtext{}{\Afootnote[nosep]{sapado \emph{err.} {\eg}}}\\
 fue mejor.\par
 \pend
-
+%
 \begin{center}
-		[II]
+		\textbf{[II]}
 \end{center}
 \pstart
 \edtext{Y pues}{\lemma{y pues}\Afootnote{Pues si {\delt}}} vemos lo presente\\
@@ -278,9 +278,9 @@ más que duró lo q\emph{ue} vio,\\
 pues que todo ha de pasar\\
 por tal manera.\par
 \pend
-
+%
 \begin{center}
-		[III]\footnoteA{[III] conpara {\eg}.}
+		\textbf{[III]}\footnoteA{\textbf{[III]} conpara {\eg}.}
 \end{center}
 \pstart
 N\emph{uest}ras vidas son los ríos\\
@@ -296,9 +296,9 @@ y más chicos,\\
 los que bive\emph{n} por sus manos\\
 y los ricos.\par
 \pend
-
+%
 \begin{center}
-	[IV]\footnoteA{[IV] ynuoca {\eg}; inuocaçion {\jm}; Inuocacion {\rl}.}
+	\textbf{[IV]}\footnoteA{\textbf{[IV]} ynuoca {\eg}; inuocaçion {\jm}; Inuocacion {\rl}.}
 \end{center}
 \pstart
 Dexo las invocaçiones\\
@@ -314,9 +314,9 @@ que en este mu\emph{n}do \edtext{bivie\emph{n}do}{\lemma{biuie\emph{n}do}\Afootn
 el mu\emph{n}do no conosçió\\
 su deidad.\par
 \pend
-
+%
 \begin{center}
-	[V]\footnoteA{[V] ap[lica] y [co]\emph{n}para \emph{ras.} {\eg}.}
+	\textbf{[V]}\footnoteA{\textbf{[V]} ap[lica] y [co]\emph{n}para \emph{ras.} {\eg}.}
 	\end{center}
 \pstart
 Este mu\emph{n}do es el camino\\
@@ -332,9 +332,9 @@ al tienpo que feneçemos;\\
 así que, q\emph{ua}ndo morimos,\\
 descansamos.\par
 \pend
-
+%
 \begin{center}
-	[VI]\footnoteA{[VI] p\emph{r}osigue {\eg}.}
+	\textbf{[VI]}\footnoteA{\textbf{[VI]} p\emph{r}osigue {\eg}.}
 \end{center}
 \pstart
 \edtext{Este}{\lemma{este}\Afootnote{y este {\jm}}} mu\emph{n}do bueno fue\\
@@ -350,9 +350,9 @@ a nasçer \edtext{acá}{\lemma{aca}\Afootnote{aqua {\jm}}} entre nos\\
 \emph{e} bevir en este suelo\\
 do murió.\par
 \pend
-
+%
 \begin{center}
-	[VII]\footnoteA{[VII] XXV en {\jm}; XIII en {\rl}.}
+	\textbf{[VII]}\footnoteA{\textbf{[VII]} XXV en {\jm}; XIII en {\rl}.}
 \end{center}
 \pstart
 Si fuese en n\emph{uest}ro poder\\
@@ -371,9 +371,9 @@ desconpuesta!\par
 \vfill
 \relax
 \newpage
-
+%
 \begin{center}
-	[VIII]\footnoteA{[VIII] VII en \emph{86*JM}.}
+	\textbf{[VIII]}\footnoteA{\textbf{[VIII]} VII en \emph{86*JM}.}
 \end{center}
 \pstart
 Ved de q\emph{uá}nd poco balor\\
@@ -389,9 +389,9 @@ q\emph{ue} \edtext{acaesçen}{\Afootnote{contecen {\im}}},\\
 en los más altos estados\\
 desfallesçen.\par
 \pend
-
+%
 \begin{center}
-	[IX]\footnoteA{[IX] VIII en {\jm}, {\rl}.}
+	\textbf{[IX]}\footnoteA{\textbf{[IX]} VIII en {\jm}, {\rl}.}
 \end{center}
 \pstart
 \edtext{Dezidme}{\lemma{dezidme}\Afootnote{Dezimos {\im}}}, la fermosura,\\
@@ -407,9 +407,9 @@ todo se torna graveza\\
 q\emph{ua}ndo llega al arraval \edtext{}{\Afootnote[nosep]{a la hedat \emph{err.} {\eg}}}\\
 de senetud.\par
 \pend
-
+%
 \begin{center}
-	[X]\footnoteA{[X] IX en {\jm}, {\rl}.}
+	\textbf{[X]}\footnoteA{\textbf{[X]} IX en {\jm}, {\rl}.}
 \end{center}
 \pstart
 Pues la sangre d\emph{e} los godos,\\
@@ -425,9 +425,9 @@ que los tiene\emph{n}!\\
 con oficios no devidos\\
 se \edtext{ma\emph{n}tiene\emph{n}}{\Afootnote{sostienen {\im}}}.\par
 \pend
-
+%
 \begin{center}
-	[XI]\footnoteA{[XI] X en {\jm}, {\rl}.}
+	\textbf{[XI]}\footnoteA{\textbf{[XI]} X en {\jm}, {\rl}.}
 \end{center}
 \pstart
 Los estados y \edtext{riqueza}{\Afootnote{riquezas {\delt}, {\hh}}}\\
@@ -443,9 +443,9 @@ la qual no puede ser una\\
 ni \edtext{estar}{\Afootnote{ser {\im}}} estable ni q\emph{ue}da\\
 en una cosa.\par
 \pend
-
+%
 \begin{center}
-	[XII]\footnoteA{[XII] XI en {\jm}, {\rl}.}
+	\textbf{[XII]}\footnoteA{\textbf{[XII]} XI en {\jm}, {\rl}.}
 \end{center}
 \pstart
 \edtext{Y pues}{\lemma{y pues}\Afootnote{pero {\gamm}, {\im}}} digo que \edtext{acompañen}{\Afootnote{aco\emph{n}pañe {\eg}}}\\
@@ -461,9 +461,9 @@ y los torme\emph{n}tos de allá,\\
 que por ellos esperamos,\\
 eternales.\par
 \pend
-
+%
 \begin{center}
-	[XIII]\footnoteA{[XIII] XII en {\jm}, {\rl}.}
+	\textbf{[XIII]}\footnoteA{\textbf{[XIII]} XII en {\jm}, {\rl}.}
 \end{center}
 \pstart
 Los plazeres \emph{e} dulçores\\
@@ -479,9 +479,9 @@ sin parar;\\
 \edtext{si}{\Afootnote{y \emph{γ}, {\im}}} queremos dar la buelta\\
 no ay lugar.\par
 \pend
-
+%
 \begin{center}
-	[XIV]\footnoteA{[XIV] XXVI en {\jm}.}
+	\textbf{[XIV]}\footnoteA{\textbf{[XIV]} XXVI en {\jm}.}
 \end{center}
 \pstart
 Estos reyes poderosos\\
@@ -497,9 +497,9 @@ así los trata la muerte\\
 como a los pobres pastores\\
 de ganados.\par
 \pend
-
+%
 \begin{center}
-	[XV]\footnoteA{[XV] XXVII en {\jm}.}
+	\textbf{[XV]}\footnoteA{\textbf{[XV]} XXVII en {\jm}.}
 \end{center}
 \pstart
 Dexemos a los troyanos,\\
@@ -515,9 +515,9 @@ vengamos a lo de ayer\\
 que tan bie\emph{n} es olvidado\\
 como aquello.\par
 \pend
-
+%
 \begin{center}
-	[XVI]\footnoteA{[XVI] XXVIII en {\jm}.}
+	\textbf{[XVI]}\footnoteA{\textbf{[XVI]} XXVIII en {\jm}.}
 \end{center}
 \pstart
 ¿Qué se fizo el rey don Jua\emph{n}?\\
@@ -533,9 +533,9 @@ y çimeras\\
 ¿Qué fuero\emph{n} sino verduras\\
 de las eras?\par
 \pend
-
+%
 \begin{center}
-	[XVII]\footnoteA{[XVII] XXIX en {\jm}.}
+	\textbf{[XVII]}\footnoteA{\textbf{[XVII]} XXIX en {\jm}.}
 \end{center}
 \pstart
 ¿Qué se fiziero\emph{n} las damas,\\
@@ -551,9 +551,9 @@ que tañían?\\
 aquellas ropas \edtext{trepadas}{\Afootnote{japadas {\jm}; chapadas {\rl}, \emph{ε}, {\im}}}\\
 que \edtext{traían}{\lemma{trayan}\Afootnote{vestian \emph{ε}}}?\par
 \pend
-
+%
 \begin{center}
-	[XVIII]\footnoteA{[XVIII] XXX en {\jm}.}
+	\textbf{[XVIII]}\footnoteA{\textbf{[XVIII]} XXX en {\jm}.}
 \end{center}
 \pstart
 Pues el otro, su heredero,\\
@@ -569,9 +569,9 @@ aviéndole seído\footnoteE{\comillas{seydo} proviene del vocablo aragonés \com
 ¡q\emph{uá}nd poco duró con él\\
 lo que le dio!\par
 \pend
-
+%
 \begin{center}
-	[XIX]\footnoteA{[XIX] XXXI en {\jm}.}
+	\textbf{[XIX]}\footnoteA{\textbf{[XIX]} XXXI en {\jm}.}
 \end{center}
 \pstart
 Las dádivas \edtext{desmedidas}{\Afootnote{demasiadas {\im}}},\\
@@ -587,9 +587,9 @@ ta\emph{n} sobrados\\
 ¿Qué fuero\emph{n} sino roçíos\\
 de los prados?\par
 \pend
-
+%
 \begin{center}
-	[XX]\footnoteA{[XX] XXXII en {\jm}.}
+	\textbf{[XX]}\footnoteA{\textbf{[XX]} XXXII en {\jm}.}
 \end{center}
 \pstart
 Pues su herm\emph{an}o el inoçe\emph{n}te,\\
@@ -605,9 +605,9 @@ mas como fuese mortal,\\
 q\emph{ua}ndo más ardía el fuego,\\
 \edtext{echaste}{\Afootnote{cebaste {\mn}}} agua!\par
 \pend
-
+%
 \begin{center}
-	[XXI]\footnoteA{[XXI] XXXIII en {\jm}.}
+	\textbf{[XXI]}\footnoteA{\textbf{[XXI]} XXXIII en {\jm}.}
 \end{center}
 \pstart
 Pues aquel gran Co\emph{n}destable,\\
@@ -623,9 +623,9 @@ su ma\emph{n}dar,\\
 ¿\edtext{Qué fuero\emph{n} sino pesares}{\lemma{que fuero\emph{n} sino pesares}\Afootnote{dolores, ansias pesares {\mn}; fueron le sy no {\im}}}\\
 al dexar?\par
 \pend
-
+%
 \begin{center}
-	[XXII]\footnoteA{[XXII] XXXIV en {\jm}.}
+	\textbf{[XXII]}\footnoteA{\textbf{[XXII]} XXXIV en {\jm}.}
 \end{center}
 \pstart
 \edtext{Pues}{\lemma{pues}\Afootnote{E {\rl}}} los otros dos herm\emph{an}os,\\
@@ -644,9 +644,9 @@ fue \edtext{amatada}{\Afootnote{matada {\jm}}}?\par
 \relax
 \vfill
 \newpage
-
+%
 \begin{center}
-	[XXIII]\footnoteA{[XXIII] XXXV en {\jm}.}
+	\textbf{[XXIII]}\footnoteA{\textbf{[XXIII]} XXXV en {\jm}.}
 \end{center}
 \pstart
 Tantos duq\emph{ue}s exçele\emph{n}tes,\\
@@ -662,9 +662,9 @@ q\emph{ua}ndo tú, cruda\footnoteE{\comillas{cruda} = \comillas{Se toma tambien 
 co\emph{n} tu fuerça las atierras\\
 y desfazes\footnoteE{\comillas{guerras/pazes}, \comillas{atierras/desfazes} = es probable que {\jm} haya leído erróneamente, invirtiendo el orden entre los vv. 272-273 y 275-276, algo que puede conjeturarse por la lección \emph{passos}, quizá una lectura errónea de \emph{pazes} y \emph{guerras}, que aparece en 273, cuando en el resto de testimonios aparece en el 272, al igual que en lugar de \emph{atierras} lee \emph{desfazes} y al revés.}.\par
 \pend
-
+%
 \begin{center}
-	[XXIV]\footnoteA{[XXIV] XXXVI en {\jm}.}
+	\textbf{[XXIV]}\footnoteA{\textbf{[XXIV]} XXXVI en {\jm}.}
 \end{center}
 \pstart
 Las \edtext{huestes}{\Afootnote{\emph{om.} {\mn}}} innumerables,\\
@@ -680,9 +680,9 @@ la cava ho\emph{n}da, \edtext{chapada}{\Afootnote{japada {\jm}}},\\
 todo lo \edtext{pasas}{\Afootnote{lleuas {\hh}}} \edtext{de claro}{\Afootnote{de claro en claro {\jm}}}\\
 co\emph{n} tu flecha.\par
 \pend
-
+%
 \begin{center}
-	[XXV]\footnoteA{[XXV] XIII en {\jm}. || dirige la fabla al maestre do\emph{n} rodrigo su padre {\eg}; ffabla del maestre do\emph{n} rr\emph{odri}go ma\emph{n}riq\emph{ue} {\hh}.}
+	\textbf{[XXV]}\footnoteA{\textbf{[XXV]} XIII en {\jm}. || dirige la fabla al maestre do\emph{n} rodrigo su padre {\eg}; ffabla del maestre do\emph{n} rr\emph{odri}go ma\emph{n}riq\emph{ue} {\hh}.}
 \end{center}
 \pstart
 Aquel de \edtext{buenos}{\Afootnote{bienes {\mn}}} abrigo,\\
@@ -698,9 +698,9 @@ ni los quiero fazer caros,\\
 \edtext{pues que todo el mu\emph{n}do sabe}{\Afootnote{pues que todo el mu\emph{n}do lo sabe {\eg}; pues quel mundo todo sabe {\rl}; pues el mundo todo sabe {\im}}}\\
 quales fuero\emph{n}.\par
 \pend
-
+%
 \begin{center}
-	[XXVI]\footnoteA{[XXVI] XIV en {\jm}.}
+	\textbf{[XXVI]}\footnoteA{\textbf{[XXVI]} XIV en {\jm}.}
 \end{center}
 \pstart
 ¡\edtext{Qué amigo de sus amigos}{\lemma{Que amigo desus amigos}\Afootnote{que amigo de amigos {\eg}, {\hh}; amigo de sus amigos {\mn}, {\im}}}!,\\
@@ -716,9 +716,9 @@ Qué gr\emph{aci}a para donosos!\\
 Y a los bravos \edtext{y dañosos}{\Afootnote{y furiosos {\jm}; y soberuios {\hh}}},\\
 ¡un leó\emph{n}!\par
 \pend
-
+%
 \begin{center}
-	[XXVII]\footnoteA{[XXVII] XV en {\jm}. || conpara {\eg}.}
+	\textbf{[XXVII]}\footnoteA{\textbf{[XXVII]} XV en {\jm}. \textbf{||} conpara {\eg}.}
 \end{center}
 \pstart
 En \edtext{}{\Afootnote[nosep]{en [la] \emph{eras.} {\eg}}} ventura, \edtext{Otavïano}{\lemma{otauiano}\Afootnote{octoniano {\jm}}},\\
@@ -734,9 +734,9 @@ con alegría;\\
 \edtext{Marco Atilio}{\lemma{marco atilio}\Afootnote{marco tulio {\eg}, {\im}; mateo tulio {\jm}}} en la verdad\\
 que prometía.\par
 \pend
-
+%
 \begin{center}
-	[XXVIII]\footnoteA{[XXVIII] XXVI en {\jm}. || prosigue {\eg}.}
+	\textbf{[XXVIII]}\footnoteA{\textbf{[XXVIII]} XXVI en {\jm}. \textbf{||} prosigue {\eg}.}
 \end{center}
 \pstart
 Antonio \edtext{Pío}{\lemma{pio}\Afootnote{pia {\jm}}} e\emph{n} cleme\emph{n}çia,\\
@@ -752,9 +752,9 @@ de la guerra;\\
 \edtext{Camillo}{\lemma{camjllo}\Afootnote{canjno {\eg}; camelio {\im}}} en el \edtext{gran}{\Afootnote{gra\emph{n}de {\hh}}} amor\\
 de su tierra.\par
 \pend
-
+%
 \begin{center}
-	[XXIX]\footnoteA{[XXIX] XVII en {\jm}; XXX en {\hh}.}
+	\textbf{[XXIX]}\footnoteA{\textbf{[XXIX]} XVII en {\jm}; XXX en {\hh}.}
 \end{center}
 \pstart
 No dexó grandes thesoros\\
@@ -772,9 +772,9 @@ se perdiero\emph{n},\\
 las \edtext{rentas}{\Afootnote{villas {\eg}; rendas {\rl}}} y los basallos\\
 que le diero\emph{n}.\par
 \pend 
-
+%
 \begin{center}
-	[XXX]\footnoteA{[XXX] XVIII en {\jm}; XXIX en {\hh}.}
+	\textbf{[XXX]}\footnoteA{\textbf{[XXX]} XVIII en {\jm}; XXIX en {\hh}.}
 \end{center}
 \pstart
 Pues \edtext{por su}{\Afootnote{ensu {\jm}}} ho\emph{n}rra y estado,\\
@@ -789,9 +789,9 @@ fizo tratos ta\emph{n} ho\emph{n}rrosos\\
 que le diero\emph{n} \edtext{aún}{\lemma{avn}\Afootnote{muy {\im}}} más \edtext{t\emph{ie}rras}{\Afootnote{tierra {\gamm}, {\im}}}\\
 \edtext{que}{\Afootnote{quel {\jm}}} tenía.\par
 \pend
-
+%
 \begin{center}
-	[XXXI]\footnoteA{[XXXI] XIX en {\jm}.}
+	\textbf{[XXXI]}\footnoteA{\textbf{[XXXI]} XIX en {\jm}.}
 \end{center}
 \pstart
 \edtext{Y}{\lemma{y}\Afootnote{\emph{om. γ}, {\im}}} estas sus viejas istorias\\
@@ -807,9 +807,9 @@ bie\emph{n} gastada,\\
 la grand cavall\emph{er}ía\\
 del espada.\par
 \pend
-
+%
 \begin{center}
-	[XXXII]\footnoteA{[XXXII] XX en {\jm}.}
+	\textbf{[XXXII]}\footnoteA{\textbf{[XXXII]} XX en {\jm}.}
 \end{center}
 \pstart
 \edtext{Y}{\lemma{y}\Afootnote{\emph{om.} {\jm}}} sus villas \edtext{y sus t\emph{ie}rras}{\Afootnote{y lugares {\mn}}}\\
@@ -825,9 +825,9 @@ dígalo el de Portugal,\\
 \edtext{y en}{\Afootnote{en {\eg}; si en {\rl}; quien en {\hh}}} Castilla, quien siguió\\
 su partido.\par                                                                          
 \pend
-
+%
 \begin{center}
-	[XXXIII]\footnoteA{[XXXIII] XXI en {\jm}.}
+	\textbf{[XXXIII]}\footnoteA{\textbf{[XXXIII]} XXI en {\jm}.}
 \end{center}
 \pstart
 Después \edtext{que puso}{\Afootnote{de puesta {\eg}, {\delt}}} la vida\\
@@ -843,9 +843,9 @@ en la su villa de Ocaña,\\
 vino la Muerte \edtext{a}{\Afootnote{\emph{om.} {\im}}} llamar\edtext{}{\Afootnote[nosep]{lamar \emph{err.} {\im}}}\\
 a su puerta,\par
 \pend
-
+%
 \begin{center}
-	[XXXIV]\footnoteA{[XXXIV] XXII en {\jm}. || ffabla la muerte con el maestre {\eg}.}
+	\textbf{[XXXIV]}\footnoteA{\textbf{[XXXIV]} XXII en {\jm}. \textbf{||} ffabla la muerte con el maestre {\eg}.}
 \end{center}
 \pstart
 diziendo: «bue\emph{n} cavallero,\\
@@ -861,9 +861,9 @@ por la fama,\\
 para sofrir \edtext{esta}{\Afootnote{aquesta {\hh}}} afrenta\\
 q\emph{ue} \edtext{vos}{\Afootnote{os {\im}}} llama.\par                        
 \pend
-
+%
 \begin{center}
-	[XXXV]\footnoteA{[XXXV] XXIII en {\jm}.}
+	\textbf{[XXXV]}\footnoteA{\textbf{[XXXV]} XXIII en {\jm}.}
 \end{center}
 \pstart
 »No se os faga ta\emph{n} amarga\\
@@ -879,9 +879,9 @@ mas co\emph{n} todo es muy mejor\\
 que la \edtext{otra}{\Afootnote{corona {\jm}}} \edtext{temporal}{\Afootnote{ynfernal {\eg}; corporal {\mn}}},\\     
 pereçedera.\par
 \pend
-
+%
 \begin{center}
-	[XXXVI]\footnoteA{[XXXVI] XXIV en {\jm}.}
+	\textbf{[XXXVI]}\footnoteA{\textbf{[XXXVI]} XXIV en {\jm}.}
 \end{center}
 \pstart
 »El bivir q\emph{ue} es perdurable\\
@@ -897,9 +897,9 @@ los cavall\emph{er}os famosos\\
 co\emph{n} trabajos y afliçiones\\ 
 contra moros.\par
 \pend
-
+%
 \begin{center}
-	[XXXVII]
+	\textbf{[XXXVII]}
 \end{center}
 \pstart
 »\edtext{Y}{\lemma{y}\Afootnote{\emph{om.} {\jm}}} pues vos, claro baró\emph{n},\\
@@ -915,9 +915,9 @@ partid con buena\edtext{}{\Afootnote[nosep]{bua/bna/vna {\eg}}}\footnoteE{b[uen]
 \edtext{que la vida verdadera}{\Afootnote{estotra vida tercera {\delt}, {\mn}, {\im}}}\\                                                                           
 \edtext{cobraréis}{\lemma{cobrareys}\Afootnote{ganareys {\delt}, {\mn}, {\im}}}.»\par
 \pend
-
+%
 \begin{center}
-	[XXXVIII]\footnoteA{[XXXVIII] rresponde don rrodrigo manrrique a la muerte {\eg}; Respuesta del maestre {\jm}; Reza a la muerte {\rl}; Respondel Maestre {\mn}, {\im}.}
+	\textbf{[XXXVIII]}\footnoteA{\textbf{[XXXVIII]} rresponde don rrodrigo manrrique a la muerte {\eg}; Respuesta del maestre {\jm}; Reza a la muerte {\rl}; Respondel Maestre {\mn}, {\im}.}
 \end{center}
 \pstart
 «No \edtext{gastemos}{\Afootnote{tengamos {\rl}}} tie\emph{n}po ya\\
@@ -933,9 +933,9 @@ q\emph{ue} q\emph{ue}rer onbre bivir\\
 q\emph{ua}ndo Dios q\emph{ui}ere q\emph{ue} muera,\\
 \edtext{es}{\Afootnote{es grand {\mn}}} locura.\par
 \pend
-
+%
 \begin{center}
-	[XXXIX]\footnoteA{[XXXIX] oraçion que fizo el maestre {\eg}; Oracion {\jm}, {\rl}, {\im}; Oracion quel Maestre face á Dios {\mn}.}
+	\textbf{[XXXIX]}\footnoteA{\textbf{[XXXIX]} oraçion que fizo el maestre {\eg}; Oracion {\jm}, {\rl}, {\im}; Oracion quel Maestre face á Dios {\mn}.}
 \end{center}
 \pstart
 »Tú, q\emph{ue} por n\emph{uest}ra maldat\\
@@ -951,9 +951,9 @@ no por mis meresçimie\emph{n}tos,\\
 mas por tu sola cleme\emph{n}çia\\ 
 me perdona.»\par
 \pend
-
+%
 \begin{center}
-    [XL]\footnoteA{[XL] fin {\eg}, {\rl}, {\mn}; Torna el actor y faze fin {\jm}.}
+    \textbf{[XL]}\footnoteA{\textbf{[XL]} fin {\eg}, {\rl}, {\mn}; Torna el actor y faze fin {\jm}.}
 \end{center}
 \pstart
 Así, co\emph{n} tal ente\emph{n}der,\\
@@ -977,11 +977,11 @@ su memoria.\par
 %
 \section*{\centering \textsc{Apéndice}}
 \addcontentsline{toc}{section}{\textsc{Apéndice}}
-
+%
 Coplas apócrifas o póstumas en la \emph{Glosa Famossisima} de Alonso de Cervantes, ubicadas entre las coplas XXIV y XXV. Texto fijado por \textcite{Foulché-Delbosc1902}.\par\vspace{5pt}
 %
 \begin{center}
-[I]
+\textbf{[I]}
 \end{center}
 \beginnumbering
 \pstart
@@ -1002,7 +1002,7 @@ Coplas apócrifas o póstumas en la \emph{Glosa Famossisima} de Alonso de Cervan
 		\vspace*{11pt}
 %
 \begin{center}
-[II]
+\textbf{[II]}
 \end{center}
 		\beginnumbering
 		\pstart
