--- a/Coplas-Manrique-LaTeX.tex
+++ b/Coplas-Manrique-LaTeX.tex
@@ -8,8 +8,8 @@
 \usepackage[citestyle=authoryear,bibstyle=nccph,backend=biber,url=true]{biblatex}
 \addbibresource{bibliography.bib}
 %
-\title{\huge\textbf{COPLAS SOBRE LA MVERTE DE SV PADRE}}
-\author{\huge\textsc{\textbf{Jorge Manriqve}}}
+\title{\huge\textbf{COPLAS SOBRE LA MUERTE DE SU PADRE}}
+\author{\huge\textsc{\textbf{Jorge Manrique}}}
 \date{\vspace{60pt}\textsc{Edición crítica liminar}\\\fontsize{40}{11}\selectfont{\vfill\LaTeX}}
 %
 \setmainfont{TemporaNR}[RawFeature=onum]
@@ -76,10 +76,10 @@
 }
 	\newpage
 %
-\hskip0pt
+\null
 \vfill
 \begin{flushright}
-Edición y composición en LuaLaTeX con el paquete Reled-\\mac de \textsc{Maïaeul Rouquette} por \textsc{Juan J. Bracamonte L}.
+Edición y composición en LuaLaTeX con el paquete Re-\\ledmac de \textsc{Maïaeul Rouquette} por \textsc{Ioannes Bracledus}.
 \end{flushright}
 \newpage
 %
@@ -88,9 +88,9 @@ Edición y composición en LuaLaTeX con el paquete Reled-\\mac de \textsc{Maïae
 %
 \pagenumbering{arabic}
 \setcounter{page}{1}
-\section*{\centering \textsc{Prefacio}}
+\section*{\textsc{Prefacio}}
 \addcontentsline{toc}{section}{\textsc{Prefacio}}
-
+%
 \textsc{Jorge Manrique nació} ca. 1440 y murió en abril de 1479. Una noticia de su muerte la transmitió Fernando del Pulgar en su \emph{Crónica de los reyes Católicos}:\par
 %
 \comillas{... peleaban los más días con el marqués de Villena e con su gente, e había entre ellos algunos recuentros. En uno de los quales, el capitán don Jorge Manrique se metió con tanta osadía entres los enemigos que, por no ser visto de los suyos para que fuera socorrido, le firieron de muchos colpes, e murió peleando cerca de las puertas del castillo de Garcimuñoz, donde acaeció aquella pelea, en la qual murieron algunos escuderos e peones de la una e la otra parte.}\footnoteE{[De la guerra que se fizo contra el marqués de Villena en Escalona y en el Marquesado]. En la ed. de Carriazo, aquí utilizada, vol. I, se ubica en la pág. 358; en la \emph{editio princeps}, atribuida a Nebrija, de 1565, en el cap. C, f. 120r; en la ed. de 1780 (Valencia), en \comillas{Segunda parte}, cap. LXXXII, pág. 146.}\par
@@ -100,8 +100,8 @@ Las \emph{Coplas sobre la muerte de su padre} son una \comillas{colección} de c
 El título, \emph{Coplas sobre la muerte de su padre}, resulta un tanto arbitrario si se analizan las rúbricas que la tradición textual transmitió: los testimonios transmitieron \comillas{dezir} (\jm), \comillas{coplas} (\eg, \hh, \im) y algún otro \comillas{De don jorge manrique} (\rl). Parece evidente, pues, que el título no es reconstruible, porque todos aquellos indican el \comillas{tema} o \comillas{motivación} y, además, hace referencia a la estructura formal de la composición; y aunque por mayoría se prefiere \comillas{coplas}, no resulta sensato sostener que aquel, en sus variantes, es el título propiamente de la \comillas{colección}. Es probable que, como algunos textos medievales, este no se haya concebido con un título como tal.\par
 %
 No se conservaron autógrafos de alguna copla ni testimonios que puedan considerarse apógrafos o idiógrafos. El testimonio más antiguo que contiene la colección de cuarenta coplas es el manuscrito del \emph{Cancionero de Egerton}, y no es sino hasta ca. 1482-83 --seis o siete años tras la redacción y cuatro o cinco tras el fallecimiento del autor-- que aparece en un impreso en carácter de \emph{editio princeps}. Es necesario destacar que los textos de Manrique solo se conservaron disueltos en cancioneros, a diferencia de otro escritor como Luis de Góngora, que habría gozado de \comillas{colecciones} con su obra.\par
-
-\section*{\centering \textsc{Testimonios}}
+%
+\section*{\textsc{Testimonios}}
 \addcontentsline{toc}{subsection}{\textsc{Testimonios}}
 %
 Para las siglas de los testimonios se adoptaron las utilizadas por \textcite{PérezPriego2017} quien, a su vez, 
@@ -110,34 +110,34 @@ las adoptó de Dutton y su trabajo \emph{El cancionero del s. XV (ca. 1360-1520)
 {\eg} = \emph{Cancionero de Egerton} (British Library, Eg. 939).
 %
 Manuscrito en papel con marcas de agua de fines de los 1470 o inicios de los 1480; 19x14,5cm.; escritura gótica cortesana, copista castellano; copia de un genuino llevado a cabo en la corte de Navarra; contiene textos poéticos y epistolares; 3 guardas [2 al inicio y 1 de cierre] y 122 fols.; los ff. 15r--18v contienen las coplas con la rúbrica \comillas{¶Coplas que fiço don jorje manrriq\emph{ue} sobre la muerte del maestre de santiago don rrodrigo manrriq\emph{ue} su padre}; la copla XL estuvo incompleta, pero otra redacción la completó en los pasajes restantes con una escritura gótica descuidada, escrita en los espacios restantes del f. 18v, porque el fol. central [primitivo f. 19v] no se conservó: tras aquel debía continuar el texto del \emph{Infante Epitus} \textcite{Beltrán2011}; \comillas{cancionero pro-Isabelino} \parencite{Severin2000}. <\url{https://www.cervantesvirtual.com/nd/ark:/59851/bmcj1034}>.\par
-
+%
 {\jm} = \emph{Vita Christi por fray Íñigo de Mendoza} (RBME, 100-II-17).
 %
 Impresión incunable; tipografía gótica a doble columna; ca. 1480-1484, Zaragosa?; 52 fols.; los ff. 41r--44v contienen las coplas con la rúbrica \comillas{Dezir de don jorge manrriq\emph{ue} por la muerte de su padre}; hay dos ejemplares y se hallan: uno, en la Real Biblioteca del Monasterio de San Lorenzo de El Escorial [100-II-17], y el otro, en la Biblioteca Comunale de Palermo [Esp-XI, F. 56, núm. 3]; plausible \emph{editio princeps}. <\url{https://rbme.patrimonionacional.es/s/rbme/item/14443#?xywh=-1601%2C-39%2C4854%2C2165}>.\par
-
+%
 {\rl} = \emph{Cancionero de Ramón de Llavia} (BNE, INC/2567).
 %
 Impresión a doble columna; tipografía gótica; Zaragoza, Pablo Hurus, ca. 1488-1490?; 98 fols.; los ff. 73r--76r contienen las coplas con la rúbrica \comillas{De don jorge manrrique por la muerte de su padre}; dos ejemplares en la Biblioteca Nacional de España con las siglas INC/2567 y INC/2892; dedicado a doña Francisquina de Bardací, según el prólogo \comillas{fecho a la señora doña francisqujna de bardaçi mujer del magnifico señor mofsen(?) joan fernandez de heredia gouernador de arago\emph{n} por ramon dellabia en q\emph{ue} le endereça el presente libro}. <\url{https://bdh-rd.bne.es/viewer.vm?id=0000108057&page=1}>.\par
-
+%
 {\hh} = \emph{Cancionero de Oñate-Castañeda} (Harvard Houghton Library, MS. Span. 97).
 %
 Manuscrito en papel; 28x20,6cm.; escritura gótica del s. XV con rasgos de cortesana; papel y filigranas ca. 1480-1486; consta de un total de 437 fols.; los ff. 421v--424v contienen las coplas I-XXXIV con la rúbrica \comillas{Coplas de do\emph{n} jorge ma\emph{n}riq\emph{ue} a la muerte del maestre do\emph{n} rod\emph{rig}o ma\emph{n}riq\emph{ue} su padre}; carece del f. 425; para las cuestión de las variantes adiáforas \emph{conservados}/\emph{olvidados} resulta lacunoso. Edición paleográfica de \textcite{Severin1990}.\par
-
+%
 {\mn} = \emph{Cancionero de Pero Guillén de Segovia} (BNE, MS/4114).
 %
 Manuscrito en papel; 21x15cm.; copia del s. XVIII de un manuscrito de fines del s. XV (Pérez Priego, 2017; Beltrán, 1991); 6 guardas [3 al inicio y 3 de cierre] y 731 fols.; los ff. 407r--418v contienen las coplas X-XL [acéfalo]. <\url{https://bdh-rd.bne.es/viewer.vm?id=0000134993&page=1}>.\par
-
+%
 {\im} = \emph{Cancionero de fray Íñigo de Mendoza} (BNE, INC/897).
 %
 Impresión incunable a doble columna; tipografía gótica; Zamora, 1483?; 90 fols.; los ff. 67r--70r contienen las coplas con la rúbrica \comillas{Coplas que hizo do\emph{n} jorge manrriq\emph{ue} ala muerte del maestre de santiago do\emph{n} rodrigo manrique su padre}; existen dos ejemplares y se hallan uno, en la Biblioteca Nacional de España [INC/897], y otro, en la Real Biblioteca del Monasterio de San Lorenzo de El Escorial [38-I-22]. <\url{https://bdh-rd.bne.es/viewer.vm?id=0000176297&page=1}>.\par
 \relax
 \vfill
-
-\section*{\centering \textsc{Criterios de edición}}
+%
+\section*{\textsc{Criterios de edición}}
 \addcontentsline{toc}{subsection}{\textsc{Criterios de edición}}
-
+%
 Para la fijación del texto se tuvo en cuenta el trabajo filológico de \textcite{Beltrán1991,Beltrán2013} y \textcite{PérezPriego1990,PérezPriego2017} y, conforme a ello, se siguió el subarquetipo \emph{α} del \emph{stemma codicum} construido por el segundo. Descartando el subarquetipo \emph{β}, siendo {\im} su testimonio más representativo\footnoteE{Aunque el subarquetipo \emph{β} contenga otros testimonios útiles para la reconstrucción del arquetipo \emph{\textbf{X}} --esto es, \emph{EM6} y \emph{PN1}--, a efectos prácticos de esta edición liminar se utilizó únicamente {\im} por ser el testimonio más representativo del subarquetipo, según lo estudiaron \textcite{PérezPriego2017} y \textcite{Beltrán1991,Beltrán2013}.}, la filiación de los testimonios se resumiría con el siguiente \emph{stemma} reducido a partir de lo indicado\footnoteE{Para el \emph{stemma} completo \emph{cfr.} \textcite[103]{PérezPriego2017}.}:\par
-
+%
 	\begin{figure}[ht]
 		\centering
 		\begin{tikzpicture}[%
@@ -168,7 +168,7 @@ Para la fijación del texto se tuvo en cuenta el trabajo filológico de \textcit
 			};
 		\end{tikzpicture}
 	\end{figure}%
-
+%
 Se utilizó como texto base el testimonio {\eg} por portar este lecciones no contaminadas, conservar el castellano de la época, y por ser cercano a la redacción de las coplas.\par
 %
 Criterios de presentación gráfica\footnoteE{Las modificaciones no aplican al aparato de variantes, a excepción de \emph{nn} y las grafías dobles.}:
@@ -194,22 +194,22 @@ El orden de las coplas que se sigue es el de {\eg} que, a su vez, coincide con e
 %
 Constituyen al aparato crítico el orden y rúbricas en los testimonios, el aparato de variantes y las explicaciones adicionales. El tipo de aparato de variantes es negativo. Luego de indicar el pasaje al que corresponde la variante --si se coloca \comillas{\char"02016}, indicará que aún continúa en el mismo pasaje--, se colocará la lección adoptada seguida por el signo \comillas{]} que encierra la lección adoptada, y tras el signo, las lecciones descartadas seguidas por su(s) sigla(s)\footnoteE{Irán en cursiva las siglas y se separarán con comas cada una.}, separada cada unidad por un \comillas{;}. Se eludirán variantes gráficas y de espacio. Las explicaciones contendrán argumentos en torno a las lecciones adoptadas, problemas respecto al estado del testimonio de base y plausibles interpretaciones.\par
 \relax
-
-\section*{\centering \textsc{Bibliografía}}
+%
+\section*{\textsc{Bibliografía}}
 \addcontentsline{toc}{section}{\textsc{Bibliografía}}
 \nocite{*}
 \printbibliography[heading=none]
 \newpage
-
-\section*{\centering \textsc{Texto y aparato críticos}}
+%
+\section*{\centering\textsc{Texto y aparato críticos}}
 \addcontentsline{toc}{section}{\textsc{Texto y aparato críticos}}
 \newpage
-
-\section*{\centering \textsc{Conspectvs siglorvm}}
+%
+\section*{\centering\textsc{Conspectus siglorum}}
 \addcontentsline{toc}{section}{\textsc{Conspectus siglorum}}
-
-\subsection*{\centering\normalsize \textsc{Sigla testimoniorvm}}
-\addcontentsline{toc}{subsection}{\textsc{Sigla testimoniorvm}}
+%
+\subsection*{\normalsize\textsc{Sigla testimoniorum}}
+\addcontentsline{toc}{subsection}{\textsc{Sigla testimoniorum}}
 \vspace*{-2.5pt}
 \begin{itemize}[label=,leftmargin=0.6cm]%
 \item {\eg} = \emph{Cancionero de Egerton}, 1470?-1480?
@@ -219,8 +219,8 @@ Constituyen al aparato crítico el orden y rúbricas en los testimonios, el apar
 \item {\mn} = \emph{Cancionero de Pero Guillén de Segovia}, copia del s. XVIII de un MS. del s. XV.
 \item {\im} = \emph{Cancionero de fray Íñigo de Mendoza}, 1483?%
 \end{itemize}
-
-\subsection*{\centering\normalsize \textsc{Sigla apparati critici}}
+%
+\subsection*{\normalsize\textsc{Sigla apparati critici}}
 \addcontentsline{toc}{subsection}{\textsc{Sigla apparati critici}}
 \vspace*{-2.5pt}
 \begin{itemize}[label=,leftmargin=0.6cm]%
@@ -975,7 +975,7 @@ su memoria.\par
 \relax
 \newpage
 %
-\section*{\centering \textsc{Apéndice}}
+\section*{\textsc{Apéndice}}
 \addcontentsline{toc}{section}{\textsc{Apéndice}}
 %
 Coplas apócrifas o póstumas en la \emph{Glosa Famossisima} de Alonso de Cervantes, ubicadas entre las coplas XXIV y XXV. Texto fijado por \textcite{Foulché-Delbosc1902}.\par\vspace{5pt}
